--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "antd": "^4.12.3",
+    "@material-ui/core": "^4.11.3",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
