--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
+    "aws-amplify": "^3.3.26",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
