--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "aws-amplify": "^3.3.26",
+    "axios": "^0.21.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
