--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-player": "^2.9.0",
     "styled-components": "^5.2.1",
     "validator": "^13.5.2"
   }
