--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-player": "^2.9.0",
+    "sass": "^1.35.2",
     "styled-components": "^5.2.1",
     "validator": "^13.5.2"
   }
