--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-amplify": "^3.3.26",
     "axios": "^0.21.4",
     "next": "10.0.7",
+    "next-cookies": "^2.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-player": "^2.9.0",
