--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.4",
     "next": "10.0.7",
     "next-cookies": "^2.0.3",
+    "query-string": "^7.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-player": "^2.9.0",
